# backend/src/routes/admin.routes.ts
@@ -2,6 +2,9 @@ import { Router } from 'express'
 import {
   createNewFilterBrandController,
   getAllUserController,
+  getLowStockProductsController,
+  getOnSaleProductsController,
+  getOutOfStockProductsController,
   getUserDetailController,
   updateProductController,
   updateProductStateController,
@@ -152,6 +155,29 @@ adminRouter.get(
   isAdminValidator,
   paginationValidator,
   wrapAsync(getAllProductController)
+)
+adminRouter.get(
+  '/manage-products/on-sale',
+  accessTokenValidator,
+  isAdminValidator,
+  paginationValidator,
+  wrapAsync(getOnSaleProductsController)
+)
+
+adminRouter.get(
+  '/manage-products/low-stock',
+  accessTokenValidator,
+  isAdminValidator,
+  paginationValidator,
+  wrapAsync(getLowStockProductsController)
+)
+
+adminRouter.get(
+  '/manage-products/out-of-stock',
+  accessTokenValidator,
+  isAdminValidator,
+  paginationValidator,
+  wrapAsync(getOutOfStockProductsController)
 )
 adminRouter.post(
   '/manage-products/create-new-product',
